--- a/Oceanalytics/Demo-angular2/src/app/client/client.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/client/client.component.html
@@ -31,106 +31,7 @@
       <button type="submit" class="btn btn-primary" [disabled]="subscribedMeasures.length === 0 || user.name === '' || user.password === ''" (click)="subscribeMeasures()">Submit</button>
     </form>
 
-    <div class="box" style="margin-top: 30px;" *ngIf="messages[env.AGENTMEASURES].length != 0
-                                              || messages[env.AGENTBYACCOUNTMEASURES].length != 0
-                                              || messages[env.ROUTINGSERVICEMEASURES].length != 0
-                                              || messages[env.AGENTBYROUTINGSERVICEMEASURES].length != 0
-                                              || messages[env.AGENTMEASURESMOVINGWINDOW].length != 0
-                                              || messages[env.AGENTBYACCOUNTMEASURSMOVINGWINDOW].length != 0
-                                              || messages[env.ROUTINGSERVICEMEASURESMOVINGWINDOW].length != 0
-                                              || messages[env.AGENTBYROUTINGSERVICEMEASURESMOVINGWINDOW].length != 0">
-      <div class="box-header">
-        <h1 class="box-title">Config Display</h1>
-      </div>
-      <!-- /.box-header -->
-      <div class="box-body no-padding">
-        <div class="row">
-          <div class="col-md-12">
-            <!-- Custom Tabs -->
-            <div class="nav-tabs-custom">
-              <ul class="nav nav-tabs">
-                <li><a href="#tab_11" data-toggle="tab" *ngIf="listTopicProperties[env.AGENTMEASURES].length > 0" [innerHtml] = "env.AGENTMEASURES"></a></li>
-                <li><a href="#tab_22" data-toggle="tab" *ngIf="listTopicProperties[env.AGENTBYACCOUNTMEASURES].length > 0" [innerHtml] = "env.AGENTBYACCOUNTMEASURES"></a></li>
-                <li><a href="#tab_33" data-toggle="tab" *ngIf="listTopicProperties[env.ROUTINGSERVICEMEASURES].length > 0" [innerHtml] = "env.ROUTINGSERVICEMEASURES"></a></li>
-                <li><a href="#tab_44" data-toggle="tab" *ngIf="listTopicProperties[env.AGENTBYROUTINGSERVICEMEASURES].length > 0" [innerHtml] = "env.AGENTBYROUTINGSERVICEMEASURES"></a></li>
-                <li><a href="#tab_55" data-toggle="tab" *ngIf="listTopicProperties[env.AGENTMEASURESMOVINGWINDOW].length > 0" [innerHtml] = "env.AGENTMEASURESMOVINGWINDOW"></a></li>
-                <li><a href="#tab_66" data-toggle="tab" *ngIf="listTopicProperties[env.AGENTBYACCOUNTMEASURSMOVINGWINDOW].length > 0" [innerHtml] = "env.AGENTBYACCOUNTMEASURSMOVINGWINDOW"></a></li>
-                <li><a href="#tab_77" data-toggle="tab" *ngIf="listTopicProperties[env.ROUTINGSERVICEMEASURESMOVINGWINDOW].length > 0" [innerHtml] = "env.ROUTINGSERVICEMEASURESMOVINGWINDOW"></a></li>
-                <li><a href="#tab_88" data-toggle="tab" *ngIf="listTopicProperties[env.AGENTBYROUTINGSERVICEMEASURESMOVINGWINDOW].length > 0" [innerHtml] = "env.AGENTBYROUTINGSERVICEMEASURESMOVINGWINDOW"></a></li>
-              </ul>
-              <div class="tab-content">
-                <div class="tab-pane" id="tab_11">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.AGENTMEASURES]; let i = index;">
-                      <input type="checkbox" id="cb1{{i}}" value="{{item}}" (click)="checkItem(env.AGENTMEASURES, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <!-- /.tab-pane -->
-                <div class="tab-pane" id="tab_22">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.AGENTBYACCOUNTMEASURES]; let i = index;">
-                      <input type="checkbox" id="cb2{{i}}" value="{{item}}" (click)="checkItem(env.AGENTBYACCOUNTMEASURES, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <!-- /.tab-pane -->
-                <div class="tab-pane" id="tab_33">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.ROUTINGSERVICEMEASURES]; let i = index;">
-                      <input type="checkbox" id="cb3{{i}}" value="{{item}}" (click)="checkItem(env.ROUTINGSERVICEMEASURES, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="tab_44">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.AGENTBYROUTINGSERVICEMEASURES]; let i = index;">
-                      <input type="checkbox" id="cb4{{i}}" value="{{item}}" (click)="checkItem(env.AGENTBYROUTINGSERVICEMEASURES, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="tab_55">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.AGENTMEASURESMOVINGWINDOW]; let i = index;">
-                      <input type="checkbox" id="cb5{{i}}" value="{{item}}" (click)="checkItem(env.AGENTMEASURESMOVINGWINDOW, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="tab_66">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.AGENTBYACCOUNTMEASURSMOVINGWINDOW]; let i = index;">
-                      <input type="checkbox" id="cb6{{i}}" value="{{item}}" (click)="checkItem(env.AGENTBYACCOUNTMEASURSMOVINGWINDOW, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="tab_77">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.ROUTINGSERVICEMEASURESMOVINGWINDOW]; let i = index;">
-                      <input type="checkbox" id="cb7{{i}}" value="{{item}}" (click)="checkItem(env.ROUTINGSERVICEMEASURESMOVINGWINDOW, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="tab_88">
-                  <div class="row">
-                    <div class="col-md-3" *ngFor="let item of listTopicProperties[env.AGENTBYROUTINGSERVICEMEASURESMOVINGWINDOW]; let i = index;">
-                      <input type="checkbox" id="cb8{{i}}" value="{{item}}" (click)="checkItem(env.AGENTBYROUTINGSERVICEMEASURESMOVINGWINDOW, item)" /> {{item}}
-                    </div>
-                  </div>
-                </div>
-                <!-- /.tab-pane -->
-              </div>
-              <!-- /.tab-content -->
-            </div>
-            <!-- nav-tabs-custom -->
-          </div>
-          <!-- /.col -->
-        </div>
-      </div>
-      <!-- /.box-body -->
-    </div>
-
-
-
+    <app-configuration [listTopicProperties]="listTopicProperties" [messages]="messages" (outputEvent)= "onConfigurationComponentChange($event)"></app-configuration>
 
     <div class="box" style="margin-top: 30px;">
       <div class="box-header">
