--- a/reporting-widgets/src/app/app.component.html
+++ b/reporting-widgets/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <app-barchart-form></app-barchart-form>
+  <app-form-example></app-form-example>
 </div>
 
