--- a/reporting-widgets/src/app/form-example/form-example.component.html
+++ b/reporting-widgets/src/app/form-example/form-example.component.html
@@ -1,5 +1,5 @@
 <h1>Example Form</h1>
-<form (ngSubmit)="onSubmit(f)" #f="ngForm">
+<form (ngSubmit)="onSubmit()" #f="ngForm">
 <div fxLayout="column wrap" fxFlexAlign="center" >
   <div>
     <md-input-container>
